styling to fix overlaping issues

--- a/src/blocks/maes_collage_banner/style.scss
+++ b/src/blocks/maes_collage_banner/style.scss
@@ -25,6 +25,12 @@
 		left: 50%;
 		transform: translate(-50%);
 		overflow-x: clip;
+		mask: linear-gradient(
+			rgba(0, 0, 0, 0),
+			rgba(0, 0, 0, 1) 8%,
+			rgba(0, 0, 0, 1) 60%,
+			rgba(0, 0, 0, 0)
+		);
 		img {
 			position: absolute;
 		}
@@ -41,6 +47,7 @@
 	// media queries
 	.logo {
 		width: 70%;
+		margin-bottom: 1.5rem;
 	}
 	@media screen and (min-width: 576px) {
 		.logo {
